--- a/SearchEngine/appsettings.json
+++ b/SearchEngine/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationUrl": "http://localhost:8089;http://localhost:8090"
 }
