--- a/BhpDocsBuilder/BhpDocsBuilder.csproj
+++ b/BhpDocsBuilder/BhpDocsBuilder.csproj
@@ -38,13 +38,16 @@
     <None Update="template\img\favicon-32x32.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="template\img\logo-dark.svg">
+    <None Update="template\img\logo-dark.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="template\img\logo.svg">
+    <None Update="template\img\logo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="template\img\site.webmanifest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="template\index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="template\js\site.js">
