--- a/SearchEngine/SearchEngine.csproj
+++ b/SearchEngine/SearchEngine.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,22 +10,22 @@
     <Compile Remove="docs\**" />
     <Compile Remove="faq\**" />
     <Compile Remove="tutorial\**" />
-    <Compile Remove="wwwroot\**" />
+    <Compile Remove="devdocs\**" />
     <Content Remove="articles\**" />
     <Content Remove="docs\**" />
     <Content Remove="faq\**" />
     <Content Remove="tutorial\**" />
-    <Content Remove="wwwroot\**" />
+    <Content Remove="devdocs\**" />
     <EmbeddedResource Remove="articles\**" />
     <EmbeddedResource Remove="docs\**" />
     <EmbeddedResource Remove="faq\**" />
     <EmbeddedResource Remove="tutorial\**" />
-    <EmbeddedResource Remove="wwwroot\**" />
+    <EmbeddedResource Remove="devdocs\**" />
     <None Remove="articles\**" />
     <None Remove="docs\**" />
     <None Remove="faq\**" />
     <None Remove="tutorial\**" />
-    <None Remove="wwwroot\**" />
+    <None Remove="devdocs\**" />
   </ItemGroup>
 
   <ItemGroup>
